--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -2,6 +2,9 @@
 repo = 'scrooloose/nerdtree'
 
 [[plugins]]
+repo = 'lambdalisue/fern.vim'
+
+[[plugins]]
 repo = 'ayu-theme/ayu-vim'
 
 [[plugins]]
