--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,16 @@
 	editor = vim -c \"set fenc=utf-8\"
 	ignorecase = false
 	quotepath = false
+	pager = delta
+[interactive]
+	diffFilter = delta --color-only
+[delta]
+	navigate = true
+[merge]
+	conflictstyle = diff3
+[diff]
+	colorMoved = default
+
 [advice]
 	detachedHead = false
 [alias]
