true color tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,3 +9,18 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind -r C-h resize-pane -L 5
+bind -r C-j resize-pane -D 5
+bind -r C-k resize-pane -U 5
+bind -r C-l resize-pane -R 5
+
+bind C-n split-window -h -p 32
+
+bind r source-file ~/.config/tmux/tmux.conf
+
+bind C-s select-layout even-horizontal
+bind C-v select-layout even-vertical
+
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
