--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,3 +24,13 @@ bind C-v select-layout even-vertical
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# mouse scroll
+set -g mouse on
+bind-key -T edit-mode-vi WheelUpPane send-keys -X scroll-up
+bind-key -T edit-mode-vi WheelDownPane send-keys -X scroll-down
+
