--- a/tools/rewifi/package.json
+++ b/tools/rewifi/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "esbuild": "^0.17.19"
+    "esbuild": "^0.17.19",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "got": "^12.6.0",
