--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -18,14 +18,14 @@ colors:
 
   # Brightened
   bright:
-    black: '#686868'
-    red: '#f58c7d'
-    green: '#58c49c'
-    yellow: '#ffd165'
-    blue: '#65bddb'
+    black:   '#686868'
+    red:     '#f58c7d'
+    green:   '#58c49c'
+    yellow:  '#ffd165'
+    blue:    '#65bddb'
     magenta: '#f17676'
-    cyan: '#9debcf'
-    white: '#ffffff'
+    cyan:    '#9debcf'
+    white:   '#ffffff'
 
 window:
   padding:
@@ -33,7 +33,16 @@ window:
     y: 4
 
 font:
-  size: 13.0
+  normal:
+    family: "Menlo"
+    style: Regular
+  bold:
+    family: "Menlo"
+    style: Bold
+  italic:
+    family: "Menlo"
+    style: Italic
+  size: 14.0
 
 env:
   TERM: xterm-256color
