--- a/tools/rewifi/package.json
+++ b/tools/rewifi/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "esbuild main.ts --bundle --platform=node --target=node18 --outdir=build",
-    "start": "pnpm build && node build/main.js"
+    "start": "node build/main.js",
+    "dev": "pnpm build && pnpm start"
   },
   "keywords": [],
   "author": "",
