--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -27,7 +27,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'pbcopy'
 
 # mouse scroll
 set -g mouse on
