--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,6 +24,8 @@ bind C-v select-layout even-vertical
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+set -g history-limit 240000
+
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
