fix global gitignore

--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
 	ignorecase = false
 	quotepath = false
 	pager = delta
+	excludesfile = ~/.gitignore
 [interactive]
 	diffFilter = delta --color-only
 [delta]
