chore: Install kitchen-cli

--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -2,4 +2,5 @@
 "aqua:codex" = "latest"
 bat = "latest"
 "cargo:sushidesu/dotmux" = "latest"
+"cargo:sushidesu/kitchen-cli" = "latest"
 jq = "latest"
