--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -205,12 +205,14 @@ on-mode-changed = []
     alt-shift-left = 'move-node-to-workspace prev'
     alt-shift-right = 'move-node-to-workspace next'
 
-    # See: https://nikitabobko.github.io/AeroSpace/commands#mode
-    alt-shift-semicolon = 'mode service'
 
-# 'service' binding mode declaration.
+    # See: https://nikitabobko.github.io/AeroSpace/commands#mode
+    alt-shift-semicolon = 'mode swap'
+    ctrl-alt-shift-semicolon = 'mode maint'
+
+# 'maint' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
-[mode.service.binding]
+[mode.maint.binding]
     esc = ['reload-config', 'mode main']
     r = ['flatten-workspace-tree', 'mode main'] # reset layout
     f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling layout
@@ -223,6 +225,20 @@ on-mode-changed = []
     alt-shift-j = ['join-with down', 'mode main']
     alt-shift-k = ['join-with up', 'mode main']
     alt-shift-l = ['join-with right', 'mode main']
+
+[mode.swap.binding]
+    esc = 'mode main'
+    1 = ['exec-and-forget ~/.config/aerospace/scripts/swap-workspaces.sh 1', 'mode main']
+    2 = ['exec-and-forget ~/.config/aerospace/scripts/swap-workspaces.sh 2', 'mode main']
+    3 = ['exec-and-forget ~/.config/aerospace/scripts/swap-workspaces.sh 3', 'mode main']
+    4 = ['exec-and-forget ~/.config/aerospace/scripts/swap-workspaces.sh 4', 'mode main']
+    5 = ['exec-and-forget ~/.config/aerospace/scripts/swap-workspaces.sh 5', 'mode main']
+    6 = ['exec-and-forget ~/.config/aerospace/scripts/swap-workspaces.sh 6', 'mode main']
+    7 = ['exec-and-forget ~/.config/aerospace/scripts/swap-workspaces.sh 7', 'mode main']
+    8 = ['exec-and-forget ~/.config/aerospace/scripts/swap-workspaces.sh 8', 'mode main']
+    9 = ['exec-and-forget ~/.config/aerospace/scripts/swap-workspaces.sh 9', 'mode main']
+    left = ['exec-and-forget ~/.config/aerospace/scripts/swap-workspaces.sh prev', 'mode main']
+    right = ['exec-and-forget ~/.config/aerospace/scripts/swap-workspaces.sh next', 'mode main']
 
 # Float Finder windows
 [[on-window-detected]]
