--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,20 +1,15 @@
 # Ghostty configuration managed by ~/.dotfiles
 # Align font, padding, cursor, and quick terminal behavior with Alacritty
 
-font-family = "Menlo"
-font-family = "Hiragino Sans"
-font-family-bold = "Menlo"
-font-family-bold = "Hiragino Sans"
-font-family-italic = "Menlo"
-font-family-italic = "Hiragino Sans"
-font-family-bold-italic = "Menlo"
-font-family-bold-italic = "Hiragino Sans"
+font-family = "Hack Nerd Font Mono"
+font-family = "Hiragino Sans W3"
 font-size = 14
+adjust-cell-width = -3%
 
 window-padding-x = 8
 window-padding-y = 4
 
-cursor-style = bar
+cursor-style = block
 adjust-cursor-thickness = 2
 shell-integration-features = no-cursor
 
