chore(mise): add duckdb tool

--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -3,5 +3,6 @@
 bat = "latest"
 "cargo:sushidesu/dotmux" = "latest"
 "cargo:sushidesu/kitchen-cli" = "latest"
+duckdb = "latest"
 jq = "latest"
 zellij = "latest"
