chore: install git-filter-repo

--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -5,4 +5,5 @@ bat = "latest"
 "cargo:sushidesu/kitchen-cli" = "latest"
 duckdb = "latest"
 jq = "latest"
+"pipx:git-filter-repo" = "latest"
 zellij = "latest"
