--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,10 +4,17 @@ unbind C-b
 bind s split-window -h -c "#{pane_current_path}"
 bind v split-window -v -c "#{pane_current_path}"
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
+
+bind -r H swap-pane -d -t '{left-of}'
+bind -r J swap-pane -d -t '{down-of}'
+bind -r K swap-pane -d -t '{up-of}'
+bind -r L swap-pane -d -t '{right-of}'
+
+bind Tab switch-client -l
 
 bind -r C-h resize-pane -L 5
 bind -r C-j resize-pane -D 5
@@ -20,6 +27,8 @@ bind r source-file ~/.config/tmux/tmux.conf
 
 bind C-s select-layout even-horizontal
 bind C-v select-layout even-vertical
+bind C-t select-layout tiled
+bind C-a select-layout main-vertical
 
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
