--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -51,7 +51,7 @@ set -g status-position bottom
 set -g status-interval 5
 set -g status-style "bg=default,fg=#cdd6f4"
 
-set -g status-left "#{?client_prefix,#[fg=#1e1e2e]#[bg=#89b4fa]#[bold],#[fg=#89b4fa]#[bold]} #S  "
+set -g status-left "#{?client_prefix,#[fg=#1e1e2e]#[bg=#89b4fa]#[bold],#[fg=#89b4fa]#[bold]} #S#{?window_zoomed_flag, #[fg=#f9e2af]#[bold]ZOOM,}  "
 set -g status-left-length 40
 
 set -g status-right "#[fg=#6c7086]#{pane_current_path} #[fg=#a6e3a1]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD 2>/dev/null) #[fg=#cdd6f4]%m/%d %H:%M"
