feat(tmux): dim inactive pane background

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -57,6 +57,8 @@ set -g status-left-length 40
 set -g status-right "#[fg=#6c7086]#{pane_current_path} #[fg=#a6e3a1]#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD 2>/dev/null) #[fg=#cdd6f4]%m/%d %H:%M"
 set -g status-right-length 100
 
+set -g window-style "bg=#1b1b2b"
+set -g window-active-style "bg=terminal"
+
 set -g window-status-format "#[fg=#6c7086] #W "
 set -g window-status-current-format "#[fg=#cba6f7,bold][ #W ]"
-
